log/build_2020-11-23_16-26-33/py_pubsub/stderr.log
  File "/home/iic/conversion/install/py_pubsub/lib/python3.6/site-packages/py_pubsub/subscriber_member_function.py", line 21
    import PIL import Image
                    ^
SyntaxError: invalid syntax

